Archive2/dd/adf1694c1fbbdf/output
main.cpp:6:5: error: use of undeclared identifier 'foo'
    foo();   
    ^
1 error generated.
